test/accept/04-overlap_images.imgine
image im = image("a/path");
im.overlap(image("other/path"), position=center-center);
im.save();